Non-admin user is able to see: Platform Dashboard

--- a/src/cloudfoundry/manifest.yml
+++ b/src/cloudfoundry/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: platform-operations 
+- name: platform-operations
   memory: 512M
   instances: 1
   host: platform-operations
@@ -9,6 +9,7 @@ applications:
   - sso
   - operations-store
   - nats-provider
+  - user-management
   env:
     SPRING_PROFILES_ACTIVE: "cloud,mongodb-cloud,nats-cloud"
     VERSION: ${version}
