--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,5 @@ services:
 refresh_schedule_h: 2
 nats.connection: ${vcap.services.nats-provider.credentials.url:nats://nats:c1oudc0w@10.10.3.10:4222}
 
+endpoints.enabled: false
+endpoints.health.enabled: true
